tests/final/expect/15__diag__malformed_include_graph_macro_arity_chain_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_include_graph_macro_arity_chain_no_crash_c.h:4:36: error: macro 'CASE_NEED2' requires 2 argument(s), got 1
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_include_graph_macro_arity_chain_no_crash_c.h:4:36: error: macro 'CASE_NEED2' requires 2 argument(s), got 1
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_include_graph_macro_arity_chain_no_crash_c.h:4:36: error: macro 'CASE_NEED2' requires 2 argument(s), got 1
